Adds the open and save dialogs

--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,7 @@
   <script src="../js/main.js"></script>
 </head>
 <body>
-
+  <input id="open" type="file" style="display:none" accept="text/*"/>
+  <input id="save" type="file" nwsaveas style="display:none" accept="text/*"/>
 </body>
 </html>
