--- a/html/index.html
+++ b/html/index.html
@@ -7,5 +7,7 @@
 <body>
   <input id="open" type="file" style="display:none" accept="text/*"/>
   <input id="save" type="file" nwsaveas style="display:none" accept="text/*"/>
+
+  <textarea id="editor" style="position:fixed;top:0;bottom:0;left:0;right:0"></textarea>
 </body>
 </html>
